--- a/morseLab/libraries/javaBindings/SConstruct
+++ b/morseLab/libraries/javaBindings/SConstruct
@@ -5,7 +5,7 @@ env = Environment()
 env.Append(JAVACLASSPATH='lib/json-simple-1.1.1.jar')
 
 env.Java('obj',Glob('src'))
-t = env.Jar('RobotSimulation','obj')
+t = env.Jar('sensorsActuators','obj')
 
 # env.NoClean('main')
 env.Clean(t, Glob('obj/*'))
