--- a/morseLab/games/tutorial.toml
+++ b/morseLab/games/tutorial.toml
@@ -1,6 +1,6 @@
 [game]
 	numrobot = 1
-	numobject = 1
+	numobject = 2
 	map = "tutorial"
 	actuators = ["MotionVW", "Keyboard"]
 	sensors = ["Pose"]
@@ -10,9 +10,18 @@
 		x = 7
 		y = 7
 		z = 0.01
-		[[game.objects.properties]]
-			label = "GOAL"
-			goal = true
+		[game.objects.properties]
+			Label = "GOAL"
+			GOAL = true
+	[[game.objects]]
+		file = "ball"
+		name = "BALL"
+		x = 1
+		y = 1
+		z = 1
+		[game.objects.properties]
+			Label = "BALL"
+			Object = true
 	[[game.camera_position]]
 		x_cam = -18.0
 		y_cam = -6.7
