--- a/test_toml/l.toml
+++ b/test_toml/l.toml
@@ -2,9 +2,16 @@
 	[[layer.score]]
 		obj = "BALL1"
 		score = 10
+		stop = false
 	[[layer.score]]
 		obj = "BALL2"
 		score = 10
+		stop = false
 	[[layer.score]]
 		obj = "Wall"
 		score = -10
+		stop = false
+	[[layer.score]]
+		obj = "cube"
+		score = 100
+		stop = true
