--- a/eduMorse/games/project.toml
+++ b/eduMorse/games/project.toml
@@ -1,40 +1,40 @@
 # hit the ball to gain points
 # if the robot hits the target, it wins the game
 
-[game]
+[simulation]
 	numrobot = 1
 	numobject = 3
 	map = "square_maze_medium"
 	actuators = ["MotionVW", "Keyboard"]
 	sensors = ["Pose", "Infrared", "Proximity"]
-	[[game.objects]]
+	[[simulation.objects]]
 		file = "target"
 		name = "target"
 		x = -5
 		y = -6
 		z = 2.5
-		[game.objects.properties]
+		[simulation.objects.properties]
 			Label = "GOAL"
 			GOAL = true
-	[[game.camera_position]]
+	[[simulation.camera_position]]
 		x_cam = -18.0
 		y_cam = -6.7
 		z_cam = 10.8
 		p_cam = 1.09
 		q_cam = 0
 		r_cam = -1.14
-	[[game.robot_position]]
+	[[simulation.robot_position]]
 		x = 7
 		y = 7
 		z = 0
 		p = 0
 		q = 0
 		r = 3.14
-	[game.time]
+	[simulation.time]
 		totalTime = 30
 		scoreUntilZeroPoints = false
 		scoreUntilNoTime = true
-	[game.initScore]
+	[simulation.initScore]
 		k = 0
 		initialScore = 0
 		stopFlag = false
