--- a/eduMorse/games/goal.toml
+++ b/eduMorse/games/goal.toml
@@ -56,3 +56,19 @@
 		k = 0
 		initialScore = 0
 		stopFlag = false
+	[[simulation.score]]
+		obj = "BALL1"
+		score = 10
+		stop = false
+	[[simulation.score]]
+		obj = "BALL2"
+		score = 10
+		stop = false
+	[[simulation.score]]
+		obj = "Wall"
+		score = -10
+		stop = false
+	[[simulation.score]]
+		obj = "target"
+		score = 100
+		stop = true
