--- a/eduMorse/games/tutorial.toml
+++ b/eduMorse/games/tutorial.toml
@@ -56,3 +56,15 @@
 		k = 0
 		initialScore = 0
 		stopFlag = false
+	[[simulation.score]]
+		obj = "BALL1"
+		score = 10
+		stop = false
+	[[simulation.score]]
+		obj = "BALL2"
+		score = 10
+		stop = false
+	[[simulation.score]]
+		obj = "Wall"
+		score = -10
+		stop = false
