--- a/eduMorse/games/robots/robot.toml
+++ b/eduMorse/games/robots/robot.toml
@@ -24,7 +24,7 @@
 		type = 'Pose'
 		[robot.sensors.interface]
 			type = 'socket'
-	[[robot.collision]]
+	[[robot.eduMorseCollision]]
 		zTran = 0.3
 		x = 0.8
 		y = 0.6
