--- a/eduMorse/games/tutorial.toml
+++ b/eduMorse/games/tutorial.toml
@@ -50,8 +50,7 @@
 		r = 0
 	[simulation.time]
 		totalTime = 30
-		scoreUntilZeroPoints = false
-		scoreUntilNoTime = true
+		simulationStopMode = "stopWhenNoTime"
 	[simulation.initScore]
 		k = 0
 		initialScore = 0
