--- a/eduMorse/games/project.toml
+++ b/eduMorse/games/project.toml
@@ -37,6 +37,9 @@
 		k = 0
 		initialScore = 0
 		stopFlag = false
+	[simulation.bandwidth]
+		frequency = 2
+		length = 10
 	[[layer.score]]
 		obj = "BALL1"
 		score = 10
