--- a/eduMorse/games/project.toml
+++ b/eduMorse/games/project.toml
@@ -40,19 +40,19 @@
 	[simulation.bandwidth]
 		frequency = 2
 		length = 20
-	[[layer.score]]
+	[[simulation.score]]
 		obj = "BALL1"
 		score = 10
 		stop = false
-	[[layer.score]]
+	[[simulation.score]]
 		obj = "BALL2"
 		score = 10
 		stop = false
-	[[layer.score]]
+	[[simulation.score]]
 		obj = "Wall"
 		score = -10
 		stop = false
-	[[layer.score]]
+	[[simulation.score]]
 		obj = "target"
 		score = 100
 		stop = true
